--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,17 @@
     <!-- project details -->
     <groupId>main.java.com.mugtaba.dataconverter</groupId>
     <artifactId>data-converter</artifactId>
-    <version>1.0</version>
+    <version>1.0.0</version>
+
+    <name>Data Converter</name>
+    <description>A tool to convert between JSON and XML formats.</description>
+    <url>https://github.com/mojmo/data-converter</url>
+    <licenses>
+        <license>
+            <name>Apache 2.0 License</name>
+            <url>https://opensource.org/licenses/Apache-2.0</url>
+        </license>
+    </licenses>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
